# easy_launcher

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RELEASE.md  SECURITY.md  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/releases/: v0.2.2.md  v0.2.3.md
.github/workflows/: pages.yml  windows-build.yml
product-html/: index.html
scripts/: launcher-task.mjs  tauri-with-rust-env.mjs  ui-regression-check.mjs
src/: App.tsx  i18n.ts  markdown.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  apps.rs  everything.rs  file_metadata.rs  icons.rs  lib.rs  main.rs  pinyin_search.rs  process.rs  search.rs  selection.rs  selection_trigger.rs  storage.rs  tools.rs  updates.rs
