[package]
name = "easy-launcher"
version = "0.2.3"
description = "A Windows-first desktop launcher"
authors = ["Easy Launcher Contributors"]
edition = "2021"

[lib]
name = "easy_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
dirs = "6"
everything-ipc = "0.1.3"
clipboard-win = "5"
base64 = "0.22"
chrono = "0.4"
rand = "0.9"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json", "stream"] }
tokio = { version = "1", features = ["time"] }
urlencoding = "2"
pinyin = "0.11"

[target.'cfg(windows)'.dependencies]
willhook = "0.6.3"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_GdiPlus", "Win32_Storage_FileSystem", "Win32_System_Com", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_UI_WindowsAndMessaging"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }

